--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
               Преподователь <span class="my-work-experiance-company">Текстильный техникум </span>
             </h4>
             <p class="my-work-experiance-period">
-              Сентябрь 1990 - Март 1992 <span class="my-work-experiance-divinder">|</span> Россия
+              Август 1990 - Октябрь 1992 <span class="my-work-experiance-divinder">|</span> Россия
             </p>
             <ul class="my-work-experiance-duties">
               <li class="my-work-experiance-duty">Теоретическая механника</li>
@@ -85,6 +85,20 @@
           </div>
 
           <!--Company 2-->
+
+          <div class="my-work-experiance-block">
+            <h4 class="my-work-experiance-position">
+              Инежере отделения АСУ <span class="my-work-experiance-company">Воинская часть </span>
+            </h4>
+            <p class="my-work-experiance-period">
+              Яварь 1995 - Ноябрь 1998 <span class="my-work-experiance-divinder">|</span> Россия
+            </p>
+            <ul class="my-work-experiance-duties">
+              <li class="my-work-experiance-duty">Автоматизированные системы управления средствами связи</li>
+            </ul>
+          </div>
+
+          <!--Company 3-->
 
           <div class="my-work-experiance-block">
             <h4 class="my-work-experiance-position">
@@ -100,7 +114,7 @@
             </ul>
           </div>
 
-          <!--Company 3-->
+          <!--Company 4-->
 
           <div class="my-work-experiance-block">
             <h4 class="my-work-experiance-position">
@@ -125,7 +139,7 @@
           <h4 class="my-education-titel-block">Запорожский машиностроительный институт (ЗНТУ)</h4>
           <h4 class="my-education-position">Технология машиностроения</h4>
           <p class="my-education-period">
-            1987 <span class="my-education-divinder">|</span> Высшее образование, диплом с отличием
+            Июнь 1987 <span class="my-education-divinder">|</span> Высшее образование, диплом с отличием
           </p>
         </div>
       </div>
