--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <!-- About me section -->
 
         <div class="about-me-section">
-          <h2 class="about-me-profession">Менеджер по закупкам / Менеджер по продажам</h2>
+          <h2 class="about-me-profession">Менеджер по закупкам</h2>
           <!-- <h2 class="about-me-profession">Менеджер по продажам</h2> -->
           <h1 class="about-me-name">Пляцко Елена</h1>
           <p class="about-me-description">
@@ -33,7 +33,7 @@
           <h3 class="main-content-titel">Имею опыт в:</h3>
           <ol class="my-project-list">
             <li class="my-project-item">
-              <p class="my-project-text my-project-link">Анализе остатков материалов по складам и кладовых</p>
+              <p class="my-project-text my-project-link">Анализе остатков материалов по складам и кладовым</p>
             </li>
 
             <li class="my-project-item">
@@ -68,38 +68,22 @@
           <h3 class="main-content-titel">Опыт работы</h3>
 
           <!--Company 1-->
-
           <div class="my-work-experiance-block">
             <h4 class="my-work-experiance-position">
-              Преподователь <span class="my-work-experiance-company">Текстильный техникум </span>
+              Начальник бюро <span class="my-work-experiance-company">КП НВК Искра</span>
             </h4>
             <p class="my-work-experiance-period">
-              Август 1990 - Октябрь 1992 <span class="my-work-experiance-divinder">|</span> Россия
+              Февраль 2003 - Сентябрь 2020 <span class="my-work-experiance-divinder">|</span> Украина
             </p>
             <ul class="my-work-experiance-duties">
-              <li class="my-work-experiance-duty">Теоретическая механника</li>
-              <li class="my-work-experiance-duty">Физика</li>
-              <li class="my-work-experiance-duty">Сопромат</li>
-              <li class="my-work-experiance-duty">Начертательная геометрия</li>
+              <li class="my-work-experiance-duty">Обеспечение машиностроительного предприятия материалами</li>
+              <li class="my-work-experiance-duty">Анализ рынка цен</li>
+              <li class="my-work-experiance-duty">Работа с поставщиками</li>
+              <li class="my-work-experiance-duty">Подписание договоров</li>
             </ul>
           </div>
 
           <!--Company 2-->
-
-          <div class="my-work-experiance-block">
-            <h4 class="my-work-experiance-position">
-              Инежере отделения АСУ <span class="my-work-experiance-company">Воинская часть </span>
-            </h4>
-            <p class="my-work-experiance-period">
-              Яварь 1995 - Ноябрь 1998 <span class="my-work-experiance-divinder">|</span> Россия
-            </p>
-            <ul class="my-work-experiance-duties">
-              <li class="my-work-experiance-duty">Автоматизированные системы управления средствами связи</li>
-            </ul>
-          </div>
-
-          <!--Company 3-->
-
           <div class="my-work-experiance-block">
             <h4 class="my-work-experiance-position">
               Инженер технолог <span class="my-work-experiance-company">ЧП Дико</span>
@@ -110,24 +94,36 @@
             <ul class="my-work-experiance-duties">
               <li class="my-work-experiance-duty">Сопровождение производства</li>
               <li class="my-work-experiance-duty">Оформление технологической и технической документации</li>
-              <li class="my-work-experiance-duty">Сопровождение механической ообработки</li>
+              <li class="my-work-experiance-duty">Сопровождение механической обработки</li>
+            </ul>
+          </div>
+
+          <!--Company 3-->
+          <div class="my-work-experiance-block">
+            <h4 class="my-work-experiance-position">
+              Инженер отделения АСУ <span class="my-work-experiance-company">Воинская часть </span>
+            </h4>
+            <p class="my-work-experiance-period">
+              Яварь 1995 - Ноябрь 1998 <span class="my-work-experiance-divinder">|</span> Россия
+            </p>
+            <ul class="my-work-experiance-duties">
+              <li class="my-work-experiance-duty">Автоматизированные системы управления средствами связи</li>
             </ul>
           </div>
 
           <!--Company 4-->
-
           <div class="my-work-experiance-block">
             <h4 class="my-work-experiance-position">
-              Начальник бюро <span class="my-work-experiance-company">КП НВК Искра</span>
+              Преподаватель <span class="my-work-experiance-company">Текстильный техникум </span>
             </h4>
             <p class="my-work-experiance-period">
-              Февраль 2003 - Сентабрь 2020 <span class="my-work-experiance-divinder">|</span> Украина
+              Август 1990 - Октябрь 1992 <span class="my-work-experiance-divinder">|</span> Россия
             </p>
             <ul class="my-work-experiance-duties">
-              <li class="my-work-experiance-duty">Обеспечение машиностроительного предприятия материалами</li>
-              <li class="my-work-experiance-duty">Анализ рынка цен</li>
-              <li class="my-work-experiance-duty">Работа с поставщиками</li>
-              <li class="my-work-experiance-duty">Подписание договоров</li>
+              <li class="my-work-experiance-duty">Теоретическая механика</li>
+              <li class="my-work-experiance-duty">Физика</li>
+              <li class="my-work-experiance-duty">Сопромат</li>
+              <li class="my-work-experiance-duty">Начертательная геометрия</li>
             </ul>
           </div>
         </div>
@@ -180,12 +176,12 @@
           <!--Soft Skills section-->
 
           <div class="soft-skills-section">
-            <h3 class="sidebar-title">Навыки</h3>
+            <h3 class="sidebar-title">Гибкие навыки</h3>
             <ul class="soft-skills-list">
               <li class="soft-skills-item"><span class="soft-skills-item-text">Коммуникабельность</span></li>
               <li class="soft-skills-item"><span class="soft-skills-item-text">Работа в команде</span></li>
               <li class="soft-skills-item"><span class="soft-skills-item-text">Обратная связь</span></li>
-              <li class="soft-skills-item"><span class="soft-skills-item-text">Желание учится</span></li>
+              <li class="soft-skills-item"><span class="soft-skills-item-text">Желание учиться</span></li>
               <li class="soft-skills-item"><span class="soft-skills-item-text">Пунктуальность</span></li>
               <li class="soft-skills-item"><span class="soft-skills-item-text">Ответственность</span></li>
             </ul>
